# simple-olap-db

./: .gitignore  Cargo.toml  README.md
configuration/: base.yaml
crates/core/: Cargo.toml
crates/core/examples/: explore_arrow.rs
crates/core/src/: lib.rs  sample_data.rs
crates/core/src/compressed/: dictionary.rs  mod.rs  runlength.rs
crates/engine/: Cargo.toml
crates/engine/examples/: explore_datafusion.rs
crates/engine/src/: compactor.rs  custom_table.rs  datafusion_engine.rs  duckdb_engine.rs  ingest.rs  lib.rs  query_engine.rs  sql_statement.rs
crates/storage/: Cargo.toml
crates/storage/examples/: compare_compression.rs  delta_datafusion.rs  explore_delta.rs  explore_parquet.rs  explore_pushdown.rs
crates/storage/src/: lib.rs
crates/web/: Cargo.toml
crates/web/src/: configuration.rs  main.rs  startup.rs  telemetry.rs
crates/web/src/api/: compact.rs  errors.rs  explain.rs  health.rs  ingest.rs  mod.rs  query.rs  register.rs  schema.rs  stats.rs  tables.rs
crates/web/tests/: api.rs
